src/objects/Batch_Monitor__c.object
<CustomObject>
    <fields>
        <fullName>Apex_Job_Status__c</fullName>
        <label>Apex_Job_Status</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BATCH_JOB_SCHEDULER__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BATCH_JOB_SCHEDULER</label>
        <referenceTo>BATCH_JOB_SCHEDULER__c</referenceTo>
        <relationshipLabel>Batch_Monitors</relationshipLabel>
        <relationshipName>Batch_Monitors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BT_CO_Batch_Run_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BT_CO_Batch_Run_Request</label>
        <referenceTo>BT_CO_Batch_Run_Request__c</referenceTo>
        <relationshipLabel>Batch_Monitors</relationshipLabel>
        <relationshipName>Batch_Monitors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Batch_Code__c</fullName>
        <label>Batch Code</label>
        <picklist>
            <picklistValues>
                <fullName>SP001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP021</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP022</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP023</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP024</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP025</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP026</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP027</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP028</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP029</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP030</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Batch_Job_Scheduler_Status__c</fullName>
        <label>Batch_Job_Scheduler_Status</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Run_Date__c</fullName>
        <label>Batch Run Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Batch_Run_Request_Status__c</fullName>
        <label>Batch Run Request Status</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Exit_Code__c</fullName>
        <label>Exit Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExtendedStatus__c</fullName>
        <label>ExtendedStatus</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JobItemsProcessed__c</fullName>
        <label>JobItemsProcessed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Letter_Print_Request_Count__c</fullName>
        <label>Letter Print Request Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Log_Instance__c</fullName>
        <description>Capturing Log Instance</description>
        <label>Log Instance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Log_Message__c</fullName>
        <description>Capturing Log Message</description>
        <label>Log Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Logger__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link up the Log object to Batch Monitor records</description>
        <label>Logger</label>
        <referenceTo>Log__c</referenceTo>
        <relationshipLabel>Batch_Monitors</relationshipLabel>
        <relationshipName>Batch_Monitors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NumberofErrors__c</fullName>
        <label>NumberofErrors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ParentJobId__c</fullName>
        <label>ParentJobId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RECORDS_RETRIEVED_COUNT__c</fullName>
        <label>Number of Records Retrieved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RECORDS_WRITTEN_COUNT__c</fullName>
        <label>Number of Records Written</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Job_id__c</fullName>
        <externalId>true</externalId>
        <label>SFDC_Job_id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>STARTED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABORTED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUCCESS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAILED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TotalJobItems__c</fullName>
        <label>TotalJobItems</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Batch_Monitor</label>
    <nameField>
        <displayFormat>BacthJob-{00000}</displayFormat>
        <label>Batch_Monitor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch_Monitors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>